--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ simple_logger = "1"
 xmltree = "0.10"
 base64 = "0.13.0"
 thiserror = "1"
+chrono = "0.4"
+
+[dev-dependencies]
+guerrilla = "0.1.4"
