Cache: Split into subfiles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ base64 = "0.13.0"
 thiserror = "1.0"
 chrono = "0.4"
 lazy_static = "1.4"
+sqlx = { version = "0.4.2", features = ["sqlite", "chrono", "macros", "runtime-tokio-rustls"] }
+async-trait = "0.1.42"
+futures-await-test = "0.3.0"
+tokio = { version = "1", features = ["full"] }
+dotenv = "0.15.0"
 
 [dev-dependencies]
 guerrilla = "0.1.4"
